# AutoControlGUI

./: .codacy.yaml  .gitignore  .readthedocs.yaml  CLAUDE.md  CONTRIBUTING.md  LEARN.md  LICENSE  README.md  Third_Party_License.md  dev.toml  dev_requirements.txt  dev_setup.py  pyproject.toml  requirements.txt  setup.py  setup.toml  stable.toml  test.html  todo.je
.circleci/: config.yml
.claude/: settings.local.json
.github/workflows/: action-json-lint.yml  auto-control-github-actions.yml  auto-control-github-actions_dev.yml  auto-control-github-actions_dev_python3_10.yml  auto-control-github-actions_dev_python3_11.yml  auto-control-github-actions_dev_python3_8.yml  auto-control-github-actions_dev_python3_9.yml  auto-control-github-actions_stable.yml  auto-control-github-actions_stable_python3_10.yml  auto-control-github-actions_stable_python3_11.yml  auto-control-github-actions_stable_python3_8.yml  auto-control-github-actions_stable_python3_9.yml  dev.yml  dev_python3_10.yml  dev_python3_11.yml  dev_python3_12.yml  dev_python3_12_macos.yml  dev_python3_12_ubuntu.yml  dev_python3_8.yml  dev_python3_9.yml  docker.yml  quality.yml  stable.yml  stable_python3_10.yml  stable_python3_11.yml  stable_python3_12.yml  stable_python3_12_macos.yml  stable_python3_12_ubuntu.yml  stable_python3_8.yml  stable_python3_9.yml
AutoControl/executor/: executor_bad_file.py  executor_folder.py  executor_one_file.py
AutoControl/keyword/: bad_keyword_1.json  keyword1.json  keyword2.json
README/: README_zh-CN.md  README_zh-TW.md
architecture_diagram/: AutoControl_Architecture.drawio
autocontrol-lsp/: README.md  pyproject.toml
autocontrol-lsp/autocontrol_lsp/: __init__.py
autocontrol-lsp/autocontrol_lsp/server/: __init__.py  __main__.py  commands.py  diagnostics.py  documents.py  handlers.py  server.py
autocontrol-lsp/vscode/: package-lock.json  package.json  tsconfig.json
autocontrol-lsp/vscode/src/: extension.ts
autocontrol_driver/: auto_py_to_exe.json  generate_autocontrol_driver.py
browser-extension/: README.md  background.js  content_script.js  manifest.json  popup.html  popup.js
ci_templates/: .gitlab-ci.yml
circle_ci_test/: execute_action_test.py  hotkey_test.py  json_action_test.py  keyboard_type_test.py  keyboard_write_test.py  locate_all_image_test.py  locate_and_click_test.py  locate_image_center_test.py  mouse_test.py  real_critical_test.py  record_test.py  screenshot_test.py
circle_ci_test/exception/: test_image_not_found_exception.py
circle_ci_test/gui_test/calculator/: calculator.py
circle_ci_test/gui_test/image/: locate_and_click_test.py
circle_ci_test/image/: locate_image_center_test.py
circle_ci_test/timeout/: timeout_test.py
circle_ci_test/unit_test/exception/: test_image_not_found_exception.py
circle_ci_test/unit_test/keyboard/: keyboard_type_test.py  keyboard_write_test.py
circle_ci_test/unit_test/record/: record_test.py
circle_ci_test_dev/unit_test/exception/: test_auto_control_exception.py
circle_ci_test_dev/unit_test/mouse/: mouse_scroll_test.py
circle_ci_test_stable/gui_test/calculator/: calculator.py
circle_ci_test_stable/gui_test/image/: locate_and_click_test.py
circle_ci_test_stable/unit_test/critical_exit/: critical_exit_test.py
circle_ci_test_stable/unit_test/execute_action/: execute_action_test.py
circle_ci_test_stable/unit_test/keyboard/: hotkey_test.py  keyboard_type_test.py  keyboard_write_test.py
deprecation_for_old_python/: deprecation_dev_setup.py  deprecation_setup.py
docker/: .dockerignore  Dockerfile  Dockerfile.xfce  docker-compose.yml  entrypoint-xfce.sh  entrypoint.sh
docs/: .readthedocs.yaml  requirements.txt
docs/source/: conf.py  index.rst
examples/: 01_screenshot_and_click.py  02_ocr_find_text.py  03_scheduler.py  04_remote_desktop.py  05_agent_loop.py  06_observability.py  07_json_action_file.py  08_record_and_replay.py  09_action_variables.py  10_window_management.py  11_hotkey_daemon.py  12_image_trigger.py  13_html_report.py  14_mcp_stdio_server.py  15_rest_api.py  16_secrets.py  17_plugin_loading.py  18_slack_daily_report.py  19_self_healing_locator.py  20_webrunner_bridge.py  21_computer_use.py  22_wayland_backend.py  23_cross_host_dag.py  24_multi_viewer_presence.py  25_chatops_bot.py  26_pytest_plugin_and_bdd.py  27_anchor_locator.py  README.md
exe/: start_autocontrol_gui.py
je_auto_control/: __init__.py  __main__.py  actions.pyi  cli.py
je_auto_control/android/: __init__.py  adb_client.py  client.py  find.py
je_auto_control/gui/: __init__.py  _auto_click_tab.py  _i18n_helpers.py  _report_tab.py  _shell_report_tabs.py  accessibility_tab.py  admin_console_tab.py  audit_log_tab.py  chatops_tab.py  computer_use_tab.py  dag_tab.py  diagnostics_tab.py  email_triggers_tab.py  hotkeys_tab.py  inspector_tab.py  live_hud_tab.py  llm_planner_tab.py  main_widget.py  main_window.py  ocr_tab.py  plugins_tab.py  presence_tab.py  profiler_tab.py  recording_editor_tab.py  remote_desktop_tab.py  rest_api_tab.py  run_history_tab.py  run_history_timeline.py  scheduler_tab.py  secrets_tab.py  self_healing_tab.py  socket_server_tab.py  trace_replay_tab.py  triggers_tab.py  usb_browser_tab.py  usb_devices_tab.py  usb_passthrough_prompt.py  variables_tab.py  vlm_tab.py  webhooks_tab.py  (+2 more)
je_auto_control/ios/: __init__.py  client.py  find.py  input.py  screen.py
je_auto_control/linux_wayland/: __init__.py  _detect.py  _select_input.py  keyboard.py  keymap.py  libei.py  listener.py  mouse.py  record.py  screen.py
je_auto_control/linux_with_x11/: __init__.py
je_auto_control/osx/: __init__.py
je_auto_control/utils/: __init__.py
je_auto_control/windows/: __init__.py
je_auto_control/wrapper/: __init__.py  _platform_linux.py  _platform_osx.py  _platform_wayland.py  _platform_windows.py  auto_control_image.py  auto_control_keyboard.py  auto_control_mouse.py  auto_control_record.py  auto_control_screen.py  auto_control_window.py  platform_wrapper.py
licenses/: Autocrontrol_LICENSE  Pillow_LICENSE
licenses/AutoControl/: LICENSE
test/manual_test/: windows_window.py
(+770 files in other folders)
