# Rename to build stable version
# This is stable version
[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "je_auto_control"
version = "0.0.180"
authors = [
    { name = "JE-Chen", email = "jechenmailman@gmail.com" },
]
description = "GUI Automation Framework"
requires-python = ">=3.10"
license-files = ["LICENSE"]
dependencies = [
    "je_open_cv==0.0.22",
    "pillow==12.2.0",
    "pyobjc-core==12.1;platform_system=='Darwin'",
    "pyobjc==12.1;platform_system=='Darwin'",
    "python-Xlib==0.33;platform_system=='Linux'",
    "mss==10.2.0",
    "defusedxml==0.7.1"
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Operating System :: OS Independent"
]

[project.scripts]
je_auto_control_mcp = "je_auto_control.utils.mcp_server.__main__:main"

[project.urls]
Homepage = "https://github.com/Intergration-Automation-Testing/AutoControl"
Documentation = "https://autocontrol.readthedocs.io/en/latest/"
Code = "https://github.com/Intergration-Automation-Testing/AutoControl"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages]
find = { namespaces = false }

[project.optional-dependencies]
gui = ["PySide6==6.11.0", "qt-material==2.17"]

[tool.bandit]
exclude_dirs = ["test", "docs", ".venv", "build", "dist"]
# B101 (use of assert) — pytest test code intentionally uses assert.
# Library code is enforced by CLAUDE.md (no assert in non-test code).
skips = ["B101"]
