# Rename to build stable version
# This is stable version
[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "je_auto_control"
version = "0.0.184"
authors = [
    { name = "JE-Chen", email = "jechenmailman@gmail.com" },
]
description = "GUI Automation Framework"
requires-python = ">=3.10"
license-files = ["LICENSE"]
dependencies = [
    "je_open_cv==0.0.22",
    "pillow==12.2.0",
    "pyobjc-core==12.1;platform_system=='Darwin'",
    "pyobjc==12.1;platform_system=='Darwin'",
    "python-Xlib==0.33;platform_system=='Linux'",
    "mss==10.2.0",
    "defusedxml==0.7.1",
    "cryptography>=42.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "Operating System :: OS Independent"
]

[project.scripts]
je_auto_control_mcp = "je_auto_control.utils.mcp_server.__main__:main"

[project.urls]
Homepage = "https://github.com/Intergration-Automation-Testing/AutoControl"
Documentation = "https://autocontrol.readthedocs.io/en/latest/"
Code = "https://github.com/Intergration-Automation-Testing/AutoControl"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools.package-data]
"je_auto_control.utils.remote_desktop" = [
    "web_viewer/*.html",
    "web_viewer/*.js",
    "web_viewer/*.svg",
    "web_viewer/*.webmanifest",
    "web_viewer/mic-worklet.js",
]

[project.optional-dependencies]
gui = ["PySide6==6.11.0", "qt-material==2.17"]
webrtc = ["aiortc>=1.14.0", "av>=14.0.0"]
signaling = ["fastapi>=0.115", "uvicorn>=0.32"]
discovery = ["zeroconf>=0.130"]

[tool.bandit]
exclude_dirs = [
    "test", "docs", ".venv", "build", "dist",
    # UI translation dicts — strings like "Token:" / "Bearer 權杖:" trip
    # B105 (hardcoded-password) heuristics. They are not credentials and
    # don't flow into any auth code; exclude wholesale.
    "language_wrapper",
]
# B101 (use of assert) — pytest test code intentionally uses assert.
# Library code is enforced by CLAUDE.md (no assert in non-test code).
skips = ["B101"]
